# ufrpe-apsoo-card-bank-crud

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/routes/: bank.py  card.py  credit_card.py
app/config/: settings.py
app/db/: session.py
app/db/models/: bank.py  card.py
app/db/repositories/: bank.py  card.py
app/schemas/: bank.py  card.py
app/services/: bank.py  card.py
